# RST

./: .clangd  .env.example  .gitignore  AGENTS.md  README.en.md  README.md  README.zh-CN.md  flutter_rust_bridge.yaml  pubspec.yaml  setup.bat
backend/: pyproject.toml
backend/app/: config.py  main.py  time_utils.py
backend/app/models/: __init__.py  api_config.py  chat.py  log.py  lore.py  preset.py  session.py
backend/app/providers/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  openai.py  registry.py
backend/app/routers/: api_configs.py  chat.py  health.py  logs.py  lores.py  presets.py  sessions.py
backend/app/services/: api_config_service.py  chat_service.py  log_service.py  lore_converter.py  lore_date.py  lore_nlp.py  lore_scheduler.py  lore_service.py  lore_updater.py  preset_service.py  prompt_assembler.py  rst_runtime_service.py  scene_service.py  session_service.py
backend/app/storage/: encryption.py  file_io.py  init_dirs.py  (+5 more)
backend/tests/: conftest.py  test_api_config_crud.py  test_chat_flow.py  test_encryption.py  test_file_io.py  test_health.py  test_log_service.py  test_lore_converter.py  test_lore_date.py  test_lore_nlp.py  test_lore_scheduler.py  test_lore_scheduler_priority.py  test_lore_timestamp_models.py  test_lores_api.py  test_message_store.py  test_openai_provider_compat.py  test_preset_crud.py  test_provider_disguise_profiles.py  test_scene_service.py  test_session_crud.py  test_sqlite_migration.py  test_time_utils.py
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: frb_api.rs  frb_generated.rs  lib.rs
(+308 files in other folders)
