[project]
name = "rst-backend"
version = "0.1.0"
description = "RST backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "cryptography>=42.0",
  "httpx>=0.27",
  "nanoid>=2.0",
  "jieba>=0.42",
  "rank-bm25>=0.2",
  "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
