[package]
name = "rst_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "rst_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
flutter_rust_bridge = "=2.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
